Fixed footer overflow

--- a/src/assets/Footer.module.css
+++ b/src/assets/Footer.module.css
@@ -19,9 +19,14 @@
 .PhotoSection {
   padding-bottom: 0;
   max-height: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .MainImage {
-  height: 100%;
+  max-height: 100%;
+  width: 100%;
   float: right;
+  bottom: 0;
 }
